# Shodafinder

./: README.md  get_favicon_hash.py  pyproject.toml  requirements.txt  setup.py
favicon_hash/: __init__.py  cli.py
