[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "shodafinder"
version = "1.0.0"
authors = [
  { name="logm1lo", email="logmilo12@gmail.com" },
]
description = "A simple Python script to compute the Shodan hash for a website's favicon"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/logm1lo/Shodafinder"
Issues = "https://github.com/logm1lo/Shodafinder/issues"
